--- a/claim_identity/templates/base.html
+++ b/claim_identity/templates/base.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Unbounded&display=swap" rel="stylesheet">
     <script src="https://c0f4f41c-2f55-4863-921b-sdk-docs.github.io/cdn/metamask-sdk.js"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <title>MetaMask Integration</title>
     <!-- Add additional CSS links here -->
 </head>
