--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -48,6 +48,15 @@ body {
     position: relative;
 }
   
+main {
+    padding: 20px;
+    margin-top: 200px;
+    margin-bottom: 20px;
+    background-color: #333;
+    border: 2px solid #ff00bf;
+    border-radius: 10px;
+    color: #f7f2fa;
+}
 
 /* Jumbotron */
 
